<resources>
    <string name="app_name">Teletap</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">LogOut</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="about_us">About Us</string>
    <string name="bank_account">Bank Account</string>
    <string name="contacts">Contacts</string>
    <string name="business_profile">Business Profile</string>
    <string name="title_activity_detail_payout">DetailPayout</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="dummy_data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earnings">Earnings</string>
    <string name="payment">Payment</string>
    <string name="payout">Payout</string>
    <string name="profile">Profile</string>
    <string name="add_contact">Add Contact</string>

    <string name="custom_text">This is custom text This is custom text This is custom text</string>
    <string name="btn_ok">OK</string>
    <string name="default_error">Default value</string>
    <string name="no_network_message">No Network Connection</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_your_details_below">Please fill your details below</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email">Email*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">SIGN UP</string>
    <string name="aed_arabic">د.إ</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_business">Add Business</string>
    <string name="business_name">Business Name*</string>
    <string name="display_name">Display Name*</string>
    <string name="about_business">About Business</string>
    <string name="save">SAVE</string>
    <string name="social_media">Social Media</string>
    <string name="website">Website</string>
    <string name="browse">Browse</string>
    <string name="shop_business_license">Shop/Business License*</string>
    <string name="back">back</string>

    <string name="need_multiple">Need Multiple Permissions</string>
    <string name="need_Location">Need Location Permissions</string>
    <string name="app_need_permission">This app needs Camera and Storage permissions.</string>
    <string name="app_need_loc">This app needs Location permissions.</string>
    <string name="grant">Grant</string>
    <string name="go_storage">Go to Permissions to Grant  Camera and Storage</string>
    <string name="cancel">Cancel</string>
    <string name="unable_get_permission">Unable to get Permission</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="zip_postal_code">Zip/Postal Code*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="country">Country*</string>
    <string name="address">Address</string>
    <string name="category">Category*</string>
    <string name="country_code">Country Code*</string>
    <string name="no_contact_found">No contact found</string>
    <string name="search_contact">Search contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="detail">Detail</string>
    <string name="transition_history">Transition history</string>
    <string name="create_bill">Create bill</string>
    <string name="no_history_found">No history found</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update_customer">Update Customer</string>
    <string name="close">close</string>
    <string name="charge">Charge</string>
    <string name="enter_amount_aed">Enter Amount(AED)</string>
    <string name="enter_amount_usd">Enter Amount(USD)</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="title_activity_card_scan">CardScanActivity</string>
    <string name="email_mobile_number">Email/Mobile number*</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_password">New Password*</string>
    <string name="current_password">Current Password*</string>
    <string name="change_password">Change Password*</string>
    <string name="no_data_found">No data found</string>
    <string name="select_country">Select country</string>
    <string name="search">Search</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="click_to_exit">Please click BACK again to exit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="an_additional_charge_for_currency_exchange">*An additional charge of 1.0% will be added in total amount for currency exchange.</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="apply">Apply</string>
    <string name="no_earnings_found">No earnings found</string>
    <string name="today_s_earnings_aed">Today\'s earnings (AED)</string>
    <string name="today_s_earnings_usd">Today\'s earnings (USD)</string>
    <string name="clear">Clear</string>
    <string name="share_invoice">Share invoice</string>
    <string name="id_proof">ID Proof*</string>
    <string name="addimage">addImage</string>
    <string name="confirm">Confirm</string>
    <string name="payment_successful">Payment successful</string>
    <string name="email_heading">Email :</string>
    <string name="verified_account_exists">Verified Account Exists</string>
    <string name="usd">USD</string>
    <string name="aed">AED</string>
    <string name="forgot_password_">Forgot password</string>
    <string name="please_enter_your_email_to_receive_a_nverification_code">Please enter your email to receive a \nverification code</string>
    <string name="amount_heading">Amount  :</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up_small">Sign Up</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_email_address">Login with Email Address</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_you_non_your_mobile_number">Enter the verification code we just sent you \non your mobile number</string>
    <string name="if_you_didn_t_receive_a_code">If you didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="enter_tax_applicable">Enter Tax Applicable(%)</string>
    <string name="nfc">NFC</string>
    <string name="ocr">OCR</string>
    <string name="please_select_the_method_with_which_you_want_to_proceed_the_payment">Please select the method with which you want to proceed the payment</string>
    <string name="total_amount">Total Amount</string>
    <string name="reset_password">Reset password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="i_accept">I Accept</string>
    <string name="business_tax_number">Business Tax Number*</string>
</resources>