<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sky_blue_border_bg"
    android:gravity="center_vertical"
    tools:context=".User.activity.SetActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/ivClose"
        android:text="@string/select_country"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_blue_icon"
        android:layout_alignParentEnd="true"
        android:onClick="onClick"
        android:contentDescription="@string/close" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/search"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:singleLine="true"
            android:layout_below="@+id/title"
            android:textColorHint="@color/border_colour"
            android:autofillHints=""
            android:inputType="text" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_10sdp"
        />

</LinearLayout>

</layout>