<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ForgotPassword"
        >

    <ImageView
        android:id="@+id/backFP"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/white_back_icon"
        android:layout_marginTop="@dimen/_15sdp"
        android:onClick="onclick"
        android:layout_marginStart="@dimen/_15sdp"
        android:contentDescription="@string/back" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_107sdp"
        android:layout_height="@dimen/_105sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/fp_lock_image"
        android:layout_marginTop="@dimen/_80sdp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password_"
        android:textSize="22sp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="#262626"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/please_enter_your_email_to_receive_a_nverification_code"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="#000000"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/switch_colour"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintTextColor="#B7BEC5"
        android:hint="@string/email"
        android:textColorHint = "#B7BEC5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_5sdp"
        app:boxCornerRadiusTopStart="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#262626"
            android:textColorHint="#B7BEC5"
            android:textSize="14sp"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnSubmitFP"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:background="@drawable/blue_btn_round_corner_bg"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/submit"
        android:onClick="onclick"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>